<resources>
    <string name="app_name">GitHubRepoApplication</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- RepoListFragment -->
    <string name="github_logo_description">Github Logo</string>
    <string name="user_not_found_description">Kullanıcı Bulunamadı</string>
    <string name="hint_github_username">Github Kullanıcı Adı Giriniz</string>
    <string name="search_button_text">Ara</string>
    <string name="dark_mode_text">Karanlık Mod</string>

    <!-- RepoListFragment -->
    <string name="github_icon">Github Icon</string>
    <string name="repo_owner">Repo Sahibi</string>
    <string name="user_not_found">Kullanıcı Bulunamadı</string>

    <!-- Item Repo -->
    <string name="repo_name">Repo Adı</string>
    <string name="description">Açıklama</string>
    <string name="stars_count">123</string>
    <string name="language">Kotlin</string>
    <string name="star_icon_description">Yıldız simgesi</string>

</resources>